--- a/localisation/ToR_Countries_l_english.yml
+++ b/localisation/ToR_Countries_l_english.yml
@@ -829,40 +829,37 @@ BSR_revolutionary_nationalist:0 "Legionalna Bŭlgariya"
 BSR_revolutionary_nationalist_ADJ:0 "Bŭlgarski"
 BSR_revolutionary_nationalist_DEF:0 "Legionalna Bŭlgariya"
 
-#Czechoslovakia
-CZE_vanguardist:0 "Czechoslovak Union"
-CZE_vanguardist_ADJ:0 "Czechoslovak"
-CZE_vanguardist_DEF:0 "The Czechoslovak Union"
-CZE_collectivist:0 "Czechoslovak Union"
-CZE_collectivist_ADJ:0 "Czechoslovak"
-CZE_collectivist_DEF:0 "The Czechoslovak Union"
-CZE_libertarian_socialist:0 "People's Czechoslovak State"
-CZE_libertarian_socialist_ADJ:0 "Czechoslovak"
-CZE_libertarian_socialist_DEF:0 "The People's Czechoslovak State"
-CZE_social_democrat:0 "Czechoslovak Republic"
-CZE_social_democrat_ADJ:0 "Czechoslovak"
-CZE_social_democrat_DEF:0 "The Republic of Czechoslovak"
-CZE_social_liberal:0 "Czechoslovak Republic"
-CZE_social_liberal_ADJ:0 "Czechoslovak"
-CZE_social_liberal_DEF:0 "The Republic of Czechoslovakia"
-CZE_market_liberal:0 "Czechoslovak Republic"
-CZE_market_liberal_ADJ:0 "Czechoslovak"
-CZE_market_liberal_DEF:0 "The Republic of Czechoslovakia"
-CZE_social_conservative:0 "Czechoslovak Republic"
-CZE_social_conservative_ADJ:0 "Czechoslovak"
-CZE_social_conservative_DEF:0 "The Republic of Czechoslovakia"
-CZE_authoritarian_democrat:0 "Kingdom of Bohemia-Slovakia"
-CZE_authoritarian_democrat_ADJ:0 "Bohemian-Slovak"
-CZE_authoritarian_democrat_DEF:0 "The Kingdom of Bohemia-Slovakia"
-CZE_paternal_autocrat:0 "Kingdom of Bohemia-Slovakia"
-CZE_paternal_autocrat_ADJ:0 "Bohemian-Slovak"
-CZE_paternal_autocrat_DEF:0 "The Kingdom of Bohemia-Slovakia"
-CZE_national_populist:0 "Empire of Czechia"
+#Czechia
+CZE_vanguardist:0 "Czech People's Republic"
+CZE_vanguardist_ADJ:0 "Czech"
+CZE_vanguardist_DEF:0 "The People's Republic of Czechia"
+CZE_collectivist:0 "Czech Union"
+CZE_collectivist_ADJ:0 "Czech"
+CZE_collectivist_DEF:0 "The Czech Union"
+CZE_libertarian_socialist:0 "Czech Commune"
+CZE_libertarian_socialist_ADJ:0 "Czech"
+CZE_libertarian_socialist_DEF:0 "The Czech Commune"
+CZE_social_democrat:0 "Czech Republic"
+CZE_social_democrat_ADJ:0 "Czech"
+CZE_social_democrat_DEF:0 "The Republic of Czechia"
+CZE_social_liberal:0 "Czech Republic"
+CZE_social_liberal_ADJ:0 "Czech"
+CZE_social_liberal_DEF:0 "The Republic of Czechia"
+CZE_market_liberal:0 "Czech Republic"
+CZE_market_liberal_ADJ:0 "Czech"
+CZE_market_liberal_DEF:0 "The Republic of Czechia"
+CZE_social_conservative:0 "Czech Republic"
+CZE_social_conservative_ADJ:0 "Czech"
+CZE_social_conservative_DEF:0 "The Republic of Czechia"
+CZE_authoritarian_democrat:0 "Czech Republic"
+CZE_authoritarian_democrat_ADJ:0 "Czech"
+CZE_authoritarian_democrat_DEF:0 "The Republic of Czechia"
+CZE_paternal_autocrat:0 "Kingdom of Bohemia"
+CZE_paternal_autocrat_ADJ:0 "Bohemian"
+CZE_paternal_autocrat_DEF:0 "The Kingdom of Bohemia"
+CZE_national_populist:0 "Czech Republic"
 CZE_national_populist_ADJ:0 "Czech"
-CZE_national_populist_DEF:0 "The Empire of Czechia"
-CZE_revolutionary_nationalist:0 "Českou Republikou"
-CZE_revolutionary_nationalist_ADJ:0 "Český"
-CZE_revolutionary_nationalist_DEF:0 "Českou Republikou"
+CZE_national_populist_DEF:0 "The Republic of Czechia"
 
 #Luxembourg
 LUX_vanguardist:0 "Workers State of Luxembourg"
@@ -1999,7 +1996,7 @@ MRV_revolutionary_nationalist:0 "Morava"
 MRV_revolutionary_nationalist_ADJ:0 "Moravský"
 MRV_revolutionary_nationalist_DEF:0 "Morava"
 
-# Slovakia
+#Slovakia
 SLO_vanguardist:0 "Slovak People's Republic"
 SLO_vanguardist_ADJ:0 "Slovak"
 SLO_vanguardist_DEF:0 "The People's Republic of Slovakia"
@@ -2024,15 +2021,12 @@ SLO_social_conservative_DEF:0 "The Kingdom of Slovakia"
 SLO_authoritarian_democrat:0 "Kingdom of Slovakia"
 SLO_authoritarian_democrat_ADJ:0 "Slovak"
 SLO_authoritarian_democrat_DEF:0 "The Kingdom of Slovakia"
-SLO_paternal_autocrat:0 "Slovak Junta"
+SLO_paternal_autocrat:0 "Kingdom of Slovakia"
 SLO_paternal_autocrat_ADJ:0 "Slovak"
-SLO_paternal_autocrat_DEF:0 "The Military Junta of Slovakia"
-SLO_national_populist:0 "Greater Slovakia"
+SLO_paternal_autocrat_DEF:0 "The Kingdom of Slovakia"
+SLO_national_populist:0 "Slovakian State"
 SLO_national_populist_ADJ:0 "Slovak"
-SLO_national_populist_DEF:0 "Greater Slovakia"
-SLO_revolutionary_nationalist:0 "Slovenský štát"
-SLO_revolutionary_nationalist_ADJ:0 "Slovenský"
-SLO_revolutionary_nationalist_DEF:0 "Slovenský štát"
+SLO_national_populist_DEF:0 "State of Greater Slovakia"
 
 # Moravia-Slovakia
 MSL_vanguardist:0 "Socialist Republic of Moravia-Slovakia"
@@ -2909,36 +2903,36 @@ TON_national_populist_ADJ:0 "Tonkinese"
 TON_national_populist_DEF:0 "The State of Tonkin"
 
 #Vietnam
-VIN_vanguardist:0 "Democratic Republic of Annam"
-VIN_vanguardist_ADJ:0 "Annamite"
-VIN_vanguardist_DEF:0 "The Democratic Republic of Annam"
-VIN_collectivist:0 "Democratic Republic of Annam"
-VIN_collectivist_ADJ:0 "Annamite"
-VIN_collectivist_DEF:0 "The Democratic Republic of Annam"
-VIN_libertarian_socialist:0 "Syndicate of Annam"
-VIN_libertarian_socialist_ADJ:0 "Annamite"
-VIN_libertarian_socialist_DEF:0 "Syndicate of Annam"
-VIN_social_democrat:0 "Empire of Annam"
-VIN_social_democrat_ADJ:0 "Annamite"
-VIN_social_democrat_DEF:0 "The Empire of Annam"
-VIN_social_liberal:0 "Empire of Annam"
-VIN_social_liberal_ADJ:0 "Indochina"
-VIN_social_liberal_DEF:0 "The Empire of Annam"
-VIN_market_liberal:0 "Empire of Annam"
-VIN_market_liberal_ADJ:0 "Annamite"
-VIN_market_liberal_DEF:0 "The Empire of Annam"
-VIN_social_conservative:0 "Empire of Annam"
-VIN_social_conservative_ADJ:0 "Annamite"
-VIN_social_conservative_DEF:0 "The Empire of Annam"
-VIN_authoritarian_democrat:0 "Empire of Annam"
-VIN_authoritarian_democrat_ADJ:0 "Annamite"
-VIN_authoritarian_democrat_DEF:0 "The Empire of Annam"
-VIN_paternal_autocrat:0 "Empire of Annam"
-VIN_paternal_autocrat_ADJ:0 "Annamite"
-VIN_paternal_autocrat_DEF:0 "The Empire of Annam"
-VIN_national_populist:0 "The Empire of Annam"
-VIN_national_populist_ADJ:0 "Annamite"
-VIN_national_populist_DEF:0 "The Empire of Annam"
+VIN_vanguardist:0 "Democratic Republic of Vietnam"
+VIN_vanguardist_ADJ:0 "Vietnamite"
+VIN_vanguardist_DEF:0 "The Democratic Republic of Vietnam"
+VIN_collectivist:0 "Democratic Republic of Vietnam"
+VIN_collectivist_ADJ:0 "Vietnamite"
+VIN_collectivist_DEF:0 "The Democratic Republic of Vietnam"
+VIN_libertarian_socialist:0 "Syndicate of Vietnam"
+VIN_libertarian_socialist_ADJ:0 "Vietnamite"
+VIN_libertarian_socialist_DEF:0 "Syndicate of Vietnam"
+VIN_social_democrat:0 "Republic of Dai Viet"
+VIN_social_democrat_ADJ:0 "Vietnamite"
+VIN_social_democrat_DEF:0 "The Republic of Dai Viet"
+VIN_social_liberal:0 "Empire of Vietnam"
+VIN_social_liberal_ADJ:0 "Vietnamese"
+VIN_social_liberal_DEF:0 "The Empire of Vietnam"
+VIN_market_liberal:0 "Empire of Vietnam"
+VIN_market_liberal_ADJ:0 "Vietnamite"
+VIN_market_liberal_DEF:0 "The Empire of Vietnam"
+VIN_social_conservative:0 "Empire of Vietnam"
+VIN_social_conservative_ADJ:0 "Vietnamite"
+VIN_social_conservative_DEF:0 "The Empire of Vietnam"
+VIN_authoritarian_democrat:0 "Empire of Vietnam"
+VIN_authoritarian_democrat_ADJ:0 "Vietnamite"
+VIN_authoritarian_democrat_DEF:0 "The Empire of Vietnam"
+VIN_paternal_autocrat:0 "Empire of Vietnam"
+VIN_paternal_autocrat_ADJ:0 "Vietnamite"
+VIN_paternal_autocrat_DEF:0 "The Empire of Vietnam"
+VIN_national_populist:0 "The Empire of Vietnam"
+VIN_national_populist_ADJ:0 "Vietnamite"
+VIN_national_populist_DEF:0 "The Empire of Vietnam"
 
 #Cambodia
 CAM_vanguardist:0 "Kampuchea"
@@ -6996,37 +6990,37 @@ GUO_revolutionary_nationalist:0 "Guominjun"
 GUO_revolutionary_nationalist_ADJ:0 "Guominjun"
 GUO_revolutionary_nationalist_DEF:0 "The Guominjun"
 
-#Guangxi Clique/National Protection Government
-GXC_vanguardist:0 "National Protection Government"
+#Guangxi Clique
+GXC_vanguardist:0 "Guangxi Clique"
 GXC_vanguardist_ADJ:0 "Guangxi"
-GXC_vanguardist_DEF:0 "The National Protection Government"
-GXC_collectivist:0 "National Protection Government"
+GXC_vanguardist_DEF:0 "The Guangxi Clique"
+GXC_collectivist:0 "Guangxi Clique"
 GXC_collectivist_ADJ:0 "Guangxi"
-GXC_collectivist_DEF:0 "The National Protection Government"
-GXC_libertarian_socialist:0 "National Protection Government"
+GXC_collectivist_DEF:0 "The Guangxi Clique"
+GXC_libertarian_socialist:0 "Guangxi Clique"
 GXC_libertarian_socialist_ADJ:0 "Guangxi"
-GXC_libertarian_socialist_DEF:0 "The National Protection Government"
-GXC_social_democrat:0 "National Protection Government"
+GXC_libertarian_socialist_DEF:0 "The Guangxi Clique"
+GXC_social_democrat:0 "Guangxi Clique"
 GXC_social_democrat_ADJ:0 "Guangxi"
-GXC_social_democrat_DEF:0 "The National Protection Government"
-GXC_social_liberal:0 "National Protection Government"
+GXC_social_democrat_DEF:0 "The Guangxi Clique"
+GXC_social_liberal:0 "Guangxi Clique"
 GXC_social_liberal_ADJ:0 "Guangxi"
-GXC_social_liberal_DEF:0 "The National Protection Government"
-GXC_market_liberal:0 "National Protection Government"
+GXC_social_liberal_DEF:0 "The Guangxi Clique"
+GXC_market_liberal:0 "Guangxi Clique"
 GXC_market_liberal_ADJ:0 "Guangxi"
-GXC_market_liberal_DEF:0 "The National Protection Government"
-GXC_social_conservative:0 "National Protection Government"
+GXC_market_liberal_DEF:0 "The Guangxi Clique"
+GXC_social_conservative:0 "Guangxi Clique"
 GXC_social_conservative_ADJ:0 "Guangxi"
-GXC_social_conservative_DEF:0 "The National Protection Government"
-GXC_authoritarian_democrat:0 "National Protection Government"
+GXC_social_conservative_DEF:0 "The Guangxi Clique"
+GXC_authoritarian_democrat:0 "Guangxi Clique"
 GXC_authoritarian_democrat_ADJ:0 "Guangxi"
-GXC_authoritarian_democrat_DEF:0 "The National Protection Government"
-GXC_paternal_autocrat:0 "National Protection Government"
+GXC_authoritarian_democrat_DEF:0 "The Guangxi Clique"
+GXC_paternal_autocrat:0 "Guangxi Clique"
 GXC_paternal_autocrat_ADJ:0 "Guangxi"
-GXC_paternal_autocrat_DEF:0 "The National Protection Government"
-GXC_national_populist:0 "National Protection Government"
+GXC_paternal_autocrat_DEF:0 "The Guangxi Clique"
+GXC_national_populist:0 "Guangxi Clique"
 GXC_national_populist_ADJ:0 "Guangxi"
-GXC_national_populist_DEF:0 "The National Protection Government"
+GXC_national_populist_DEF:0 "The Guangxi Clique"
 
 #Xinjiang Clique
 SIK_vanguardist:0 "Xinjiang Clique"
