--- a/localisation/ToR_Parties_l_english.yml
+++ b/localisation/ToR_Parties_l_english.yml
@@ -128,6 +128,28 @@ BEL_paternal_autocrat_party_long:0 "Verbond van Dietsche Nationaal Solidaristen"
 BEL_national_populist_party:0 "Rex"
 BEL_national_populist_party_long:0 "Parti Rexiste"
 
+#Czechia
+CZE_vanguardist_party:0 "Komunistická Strana"
+CZE_vanguardist_party_long:0 "Komunistická Strana Česká"
+CZE_collectivist_party:0 "Komunistická Strana"
+CZE_collectivist_party_long:0 "Komunistická Strana Česká"
+CZE_libertarian_socialist_party:0 "Socialisté"
+CZE_libertarian_socialist_party_long:0 "Socialistické Sjednocení"
+CZE_social_democrat_party:0 "Strana Sociálně Demokratická"
+CZE_social_democrat_party_long:0 "Česká Strana Sociálně Demokratická"
+CZE_social_liberal_party:0 "Strana Národně Sociální"
+CZE_social_liberal_party_long:0 "Česká Strana Národně Sociální"
+CZE_market_liberal_party:0 "Zemědělského a Malorolnického"
+CZE_market_liberal_party_long:0 "Republikánská Strana Zemědělského a Malorolnického Lidu"
+CZE_social_conservative_party:0 "Křesťanská a Demokratická"
+CZE_social_conservative_party_long:0 "Křesťanská a Demokratická Unie – Česká Strana Lidová"
+CZE_authoritarian_democrat_party:0 "Národní Souručenství"
+CZE_authoritarian_democrat_party_long:0 "Národní Souručenství"
+CZE_paternal_autocrat_party:0 "Dům Schwarzenbergu"
+CZE_paternal_autocrat_party_long:0 "Dům Schwarzenbergu"
+CZE_national_populist_party:0 "Falangisté"
+CZE_national_populist_party_long:0 "Národní Obec Falangistická"
+
 #Netherlands
 HOL_vanguardist_party:0 "Patriotten"
 HOL_vanguardist_party_long:0 "Revolutionair Patriottisch Front"
@@ -395,10 +417,10 @@ LUX_national_populist_party_long:0 "Onofhängeg Nationalpartei"
 #Russia
 RUS_vanguardist_party:0 "Narodno-Revolyutsionery"
 RUS_vanguardist_party_long:0 "Rossiyskaya Narodno-Revolyutsionnaya Partiya"
-RUS_collectivist_party:0 "Marksisty-Kollektivisty"
-RUS_collectivist_party_long:0 "Rossiyskaya Raboche-Krest'yanskaya Partiya Marxistov-Kollektivistov"
+RUS_collectivist_party:0 "Bolsheviki"
+RUS_collectivist_party_long:0 "Bolshevistskaya fraktsiya Rossiyskaya Sotsial-Demokraticheskaya Rabochaya Partiya"
 RUS_libertarian_socialist_party:0 "Mensheviki"
-RUS_libertarian_socialist_party_long:0 "Rossiyskaya Sotsial-Demokraticheskaya Rabochaya Partiya"
+RUS_libertarian_socialist_party_long:0 "Menshevistskaya fraktsiya Rossiyskaya Sotsial-Demokraticheskaya Rabochaya Partiya"
 RUS_social_democrat_party:0 "Esery"
 RUS_social_democrat_party_long:0 "Partiya Socialistov-Revolyutsionerov"
 RUS_social_liberal_party:0 "Trudoviks"
@@ -409,16 +431,16 @@ RUS_social_conservative_party:0 "Oktobristy"
 RUS_social_conservative_party_long:0 "Soyuz 17 Oktyabrya"
 RUS_authoritarian_democrat_party:0 "ROVS"
 RUS_authoritarian_democrat_party_long:0 "Russkiy Obshe-Voinskiy Soyuz"
-RUS_paternal_autocrat_party:0 "PA-RG"
-RUS_paternal_autocrat_party_long:0 "Vremennoe Vserossiyskoe Pravitel'stvo"
-RUS_national_populist_party:0 "NTSNP"
+RUS_paternal_autocrat_party:0 "Vremennoye Pravitelstvo"
+RUS_paternal_autocrat_party_long:0 "Vremennoe Vserossiyskoe Pravitelstvo"
+RUS_national_populist_party:0 "Natsionalnyy Trudovoy"
 RUS_national_populist_party_long:0 "Natsionalno Trudovoy Soyuz Novogo Pokoleniya"
 
 #Italy
 ITA_vanguardist_party:0 "Massimalisti"
-ITA_vanguardist_party_long:0 "Partito Massimalista Italiano"
-ITA_collectivist_party:0 "Collectivisti"
-ITA_collectivist_party_long:0 "Partito Collectivista d’Italia"
+ITA_vanguardist_party_long:0 "Partito Comunista d'Italia fazione Massimalista"
+ITA_collectivist_party:0 "Comunisti"
+ITA_collectivist_party_long:0 "Partito Comunista d'Italia"
 ITA_libertarian_socialist_party:0 "Socialisti"
 ITA_libertarian_socialist_party_long:0 "Partito Socialista Italiano"
 ITA_social_democrat_party:0 "Socialisti Unitari"
@@ -479,6 +501,28 @@ UKR_paternal_autocrat_party:0 "Het’manshchyna"
 UKR_paternal_autocrat_party_long:0 "Het'manshchyna"
 UKR_national_populist_party:0 "Natsionalisty"
 UKR_national_populist_party_long:0 "Orhanizatsiya Ukrayins'kykh Natsionalistiv"
+
+#Georgia
+GEO_vanguardist_party:0 "Marksistuli Partia"
+GEO_vanguardist_party_long:0 "Sakartvelos Marksistuli Partia"
+GEO_collectivist_party:0 "Komunisturi Partia"
+GEO_collectivist_party_long:0 "Sakartvelos Komunisturi Partia"
+GEO_libertarian_socialist_party:0 "Menshevikebi"
+GEO_libertarian_socialist_party_long:0 "Sakartvelos Sotsial-Demokratiuli Partia"
+GEO_social_democrat_party:0 "Menshevikebi"
+GEO_social_democrat_party_long:0 "Sakartvelos Sotsial-Demokratiuli Partia"
+GEO_social_liberal_party:0 "Socialist-Federalistebi"
+GEO_social_liberal_party_long:0 "Socialist-Federalistebi"
+GEO_market_liberal_party:0 "Erovnul-Demokratiuli Partia"
+GEO_market_liberal_party_long:0 "Erovnul-Demokratiuli Partia"
+GEO_social_conservative_party:0 "Erovnul-Demokratiuli Partia"
+GEO_social_conservative_party_long:0 "Erovnul-Demokratiuli Partia"
+GEO_authoritarian_democrat_party:0 "Bagration-Mukhranis Sakhli"
+GEO_authoritarian_democrat_party_long:0 "Bagration-Mukhranis Sakhli"
+GEO_paternal_autocrat_party:0 "Bagration-Mukhranis Sakhli"
+GEO_paternal_autocrat_party_long:0 "Bagration-Mukhranis Sakhli"
+GEO_national_populist_party:0 "Sakartvelos Erovnuli Partia"
+GEO_national_populist_party_long:0 "Sakartvelos Erovnuli Partia"
 
 #Spanish Republic
 SPR_vanguardist_party:0 "Comunistas"
@@ -621,17 +665,17 @@ FER_vanguardist_party:0 "PNRP"
 FER_vanguardist_party_long:0 "Priamurskaya Narodno-Revolyutsionnaya Partiya"
 FER_collectivist_party:0 "KPDR"
 FER_collectivist_party_long:0 "Kollektivistskaya Partiya Dal'nevostochnoy Respubliki"
-FER_libertarian_socialist_party:0 "KPDR"
-FER_libertarian_socialist_party_long:0 "Kollektivistskaya Partiya Dal'nevostochnoy Respubliki"
-FER_social_democrat_party:0 "Mensheviki"
-FER_social_democrat_party_long:0 "Rossiyskaya Sotsial-Demokraticheskaya Rabochaya Partiya"
-FER_social_liberal_party:0 "Esery"
-FER_social_liberal_party_long:0 "Partiya Socialistov-Revolyutsionerov"
+FER_libertarian_socialist_party:0 "Mensheviki"
+FER_libertarian_socialist_party_long:0 "Rossiyskaya Sotsial-Demokraticheskaya Rabochaya Partiya"
+FER_social_democrat_party:0 "Esery"
+FER_social_democrat_party_long:0 "Partiya Socialistov-Revolyutsionerov"
+FER_social_liberal_party:0 "Trudoviks"
+FER_social_liberal_party_long:0 "Trudovaya Gruppa"
 FER_market_liberal_party:0 "Kadety"
 FER_market_liberal_party_long:0 "Konstitutsionno-Demokraticheskaya Partiya"
 FER_social_conservative_party:0 "Oktobristy"
 FER_social_conservative_party_long:0 "Soyuz 17 Oktyabrya"
-FER_authoritarian_democrat_party:0 "Vremennoye Pravitel'stvo"
+FER_authoritarian_democrat_party:0 "Zemskiy Kray"
 FER_authoritarian_democrat_party_long:0 "Priamurskiy Zemskiy Kray"
 FER_paternal_autocrat_party:0 "Imperskiy Soyuz"
 FER_paternal_autocrat_party_long:0 "Rossiyskiy Imperskiy Soyuz Orden"
@@ -685,17 +729,17 @@ MAN_national_populist_party_long:0 "Concordia Association"
 #India
 RAJ_vanguardist_party:0 "All India Forward"
 RAJ_vanguardist_party_long:0 "All India Forward Bloc"
-RAJ_collectivist_party:0 "Collectivist Party"
-RAJ_collectivist_party_long:0 "Collectivist Party of India"
+RAJ_collectivist_party:0 "Communist Party"
+RAJ_collectivist_party_long:0 "Communist Party of India"
 RAJ_libertarian_socialist_party:0 "Congress Socialists"
 RAJ_libertarian_socialist_party_long:0 "Congress Socialist Party"
 RAJ_social_democrat_party:0 "National Congress"
 RAJ_social_democrat_party_long:0 "Indian National Congress"
-RAJ_social_liberal_party:0 "Swaraj"
+RAJ_social_liberal_party:0 "Swaraj Party"
 RAJ_social_liberal_party_long:0 "Swaraj Party"
-RAJ_market_liberal_party:0 "Liberals"
+RAJ_market_liberal_party:0 "Liberal Party"
 RAJ_market_liberal_party_long:0 "Indian Liberal Party"
-RAJ_social_conservative_party:0 "Unionists"
+RAJ_social_conservative_party:0 "Unionist Party"
 RAJ_social_conservative_party_long:0 "Unionist Party"
 RAJ_authoritarian_democrat_party:0 "Congress Nationalists"
 RAJ_authoritarian_democrat_party_long:0 "Congress Nationalist Party"
@@ -749,17 +793,17 @@ SYR_national_populist_party:0 "Al-Qawmī Al-'Ijtimā'ī"
 SYR_national_populist_party_long:0 "Al-Hizb Al-Surī Al-Qawmi Al-Ijtimā'i"
 
 #Transcaspia
-TRK_vanguardist_party:0 "Novyye Bol'sheviki"
-TRK_vanguardist_party_long:0 "Novyye Bol'sheviki"
-TRK_collectivist_party:0 "Bol'sheviki"
-TRK_collectivist_party_long:0 "Bol'shevistskaya Partiya"
-TRK_libertarian_socialist_party:0 "Men'sheviki"
-TRK_libertarian_socialist_party_long:0 "Men'shevistskaya Partiya"
+TRK_vanguardist_party:0 "Novyye Bolsheviki"
+TRK_vanguardist_party_long:0 "Novyye Bolsheviki"
+TRK_collectivist_party:0 "Bolsheviki"
+TRK_collectivist_party_long:0 "Bolshevistskaya Partiya"
+TRK_libertarian_socialist_party:0 "Mensheviki"
+TRK_libertarian_socialist_party_long:0 "Menshevistskaya Partiya"
 TRK_social_democrat_party:0 "Esery"
 TRK_social_democrat_party_long:0 "Revolyutsionnaya Sotsialisticheskaya Partiya"
 TRK_social_liberal_party:0 "Zheleznodorozhnikov"
 TRK_social_liberal_party_long:0 "Partiya Zheleznodorozhnikov"
-TRK_market_liberal_party:0 "Kadets"
+TRK_market_liberal_party:0 "Kadety"
 TRK_market_liberal_party_long:0 "Novaya Partiya Kadetov"
 TRK_social_conservative_party:0 "Islomiy Partiyasi"
 TRK_social_conservative_party_long:0 "Buxoro Islomiy Partiyasi"
@@ -817,6 +861,28 @@ CAN_paternal_autocrat_party:0 "SoCreds"
 CAN_paternal_autocrat_party_long:0 "Social Credit League"
 CAN_national_populist_party:0 "Loyalists"
 CAN_national_populist_party_long:0 "League of Empire Loyalists"
+
+#Cuba
+CUB_vanguardist_party:0 ""
+CUB_vanguardist_party_long:0 ""
+CUB_collectivist_party:0 ""
+CUB_collectivist_party_long:0 ""
+CUB_libertarian_socialist_party:0 ""
+CUB_libertarian_socialist_party_long:0 ""
+CUB_social_democrat_party:0 ""
+CUB_social_democrat_party_long:0 ""
+CUB_social_liberal_party:0 ""
+CUB_social_liberal_party_long:0 ""
+CUB_market_liberal_party:0 "Partido Liberal"
+CUB_market_liberal_party_long:0 "Partido Liberal Autonomista"
+CUB_social_conservative_party:0 ""
+CUB_social_conservative_party_long:0 ""
+CUB_authoritarian_democrat_party:0 ""
+CUB_authoritarian_democrat_party_long:0 ""
+CUB_paternal_autocrat_party:0 ""
+CUB_paternal_autocrat_party_long:0 ""
+CUB_national_populist_party:0 "Partido Auténtico"
+CUB_national_populist_party_long:0 "Partido Revolucionario Cubano – Auténtico"
 
 #United States
 USA_vanguardist_party:0 "Communist Party USA"
@@ -913,19 +979,19 @@ RHO_national_populist_party_long:0 "League of Empire Loyalists (Rhodesia Branch)
 #South Africa
 SAF_vanguardist_party:0 "National Congress"
 SAF_vanguardist_party_long:0 "African National Congress"
-SAF_collectivist_party:0 "Collectivists"
-SAF_collectivist_party_long:0 "South African Collectivist Party"
+SAF_collectivist_party:0 "Communist"
+SAF_collectivist_party_long:0 "South African Communist Party"
 SAF_libertarian_socialist_party:0 "Labour-COSATU"
-SAF_libertarian_socialist_party_long:0 "Labour Party-Congress of South African Trade Unions"
-SAF_social_democrat_party:0 "Labour"
+SAF_libertarian_socialist_party_long:0 "Labour Party - Congress of South African Trade Unions"
+SAF_social_democrat_party:0 "Labour Party"
 SAF_social_democrat_party_long:0 "Labour Party"
 SAF_social_liberal_party:0 "Independents"
 SAF_social_liberal_party_long:0 "Independent MPs"
-SAF_market_liberal_party:0 "Unionists"
+SAF_market_liberal_party:0 "Unionist Party"
 SAF_market_liberal_party_long:0 "Unionist Party"
-SAF_social_conservative_party:0 "United"
+SAF_social_conservative_party:0 "United Party"
 SAF_social_conservative_party_long:0 "United Party"
-SAF_authoritarian_democrat_party:0 "Nationals"
+SAF_authoritarian_democrat_party:0 "National Party"
 SAF_authoritarian_democrat_party_long:0 "National Party"
 SAF_paternal_autocrat_party:0 "Purified Nationals"
 SAF_paternal_autocrat_party_long:0 "Purified National Party"
@@ -959,8 +1025,8 @@ BEA_national_populist_party_long:0 "League of Empire Loyalists (East African Bra
  ###############
 
 #Argentina
-ARG_vanguardist_party:0 "Colectivistas"
-ARG_vanguardist_party_long:0 "Partido Colectivista de la Argentina"
+ARG_vanguardist_party:0 "Comunistas"
+ARG_vanguardist_party_long:0 "Partido Comunista de la Argentina"
 ARG_collectivist_party:0 "Internacionalistas"
 ARG_collectivist_party_long:0 "Partido Socialista Internacional"
 ARG_libertarian_socialist_party:0 "Socialistas"
@@ -983,8 +1049,8 @@ ARG_national_populist_party_long:0 "Liga Patriótica Argentina"
 #Bolivia
 BOL_vanguardist_party:0 "Obrero"
 BOL_vanguardist_party_long:0 "Partido Obrero Revolucionario de Bolivia"
-BOL_collectivist_party:0 "Colectivistas"
-BOL_collectivist_party_long:0 "Partido Colectivista de Bolivia"
+BOL_collectivist_party:0 "Comunistas"
+BOL_collectivist_party_long:0 "Partido Comunista de Bolivia"
 BOL_libertarian_socialist_party:0 "Socialistas Unificados"
 BOL_libertarian_socialist_party_long:0 "Partido Socialista Unificado"
 BOL_social_democrat_party:0 "Republicanos Socialistas"
@@ -1005,8 +1071,8 @@ BOL_national_populist_party_long:0 "Falange Socialista Boliviana"
 #Brazil
 BRA_vanguardist_party:0 "Libertadores"
 BRA_vanguardist_party_long:0 "Aliança Nacional Libertadora"
-BRA_collectivist_party:0 "Colectivistas"
-BRA_collectivist_party_long:0 "Partido Colectivista Brasileiro"
+BRA_collectivist_party:0 "Comunistas"
+BRA_collectivist_party_long:0 "Partido Comunista Brasileiro"
 BRA_libertarian_socialist_party:0 "Confederação Operária"
 BRA_libertarian_socialist_party_long:0 "Confederação Operária Brasileira"
 BRA_social_democrat_party:0 "Democratas"
@@ -1025,10 +1091,10 @@ BRA_national_populist_party:0 "Integralistas"
 BRA_national_populist_party_long:0 "Ação Integralista Brasileira"
 
 #Chile
-CHL_vanguardist_party:0 "Colectivistas"
-CHL_vanguardist_party_long:0 "Partido Colectivista de Chile"
-CHL_collectivist_party:0 "Colectivistas"
-CHL_collectivist_party_long:0 "Partido Colectivista de Chile"
+CHL_vanguardist_party:0 "Comunistas"
+CHL_vanguardist_party_long:0 "Partido Comunista de Chile"
+CHL_collectivist_party:0 "Comunistas"
+CHL_collectivist_party_long:0 "Partido Comunista de Chile"
 CHL_libertarian_socialist_party:0 "Socialistas"
 CHL_libertarian_socialist_party_long:0 "Partido Socialista de Chile"
 CHL_social_democrat_party:0 "Socialistas"
